--- a/pom.xml
+++ b/pom.xml
@@ -61,8 +61,11 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
             <version>3.1.2</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>3.1.2</version>
+        </dependency>
     </dependencies>
 
     <build>
