--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,20 @@ spring:
   thymeleaf:
     cache: false
 
+  mail:
+    host: smtp.126.com
+    port: 465
+    username: zhouhongjidev@126.com
+    password: PRJJZPBJWPQNFFID
+    protocol: smtps
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
+
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.nowcoder.community.entity
